update routes put and delete
